@@ -7616,11 +7616,6 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-assert|assert
-literal|false
-operator|:
-literal|"Shouldn't be calling nextPosition() if you haven't asked for positions"
-assert|;
 return|return
 operator|-
 literal|1
@@ -7940,11 +7935,6 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-assert|assert
-literal|false
-operator|:
-literal|"Shouldn't be calling nextPosition() if you haven't asked for positions"
-assert|;
 return|return
 operator|-
 literal|1
@@ -8338,11 +8328,6 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-assert|assert
-literal|false
-operator|:
-literal|"should be using LowFreqDocsAndPositionsEnum"
-assert|;
 return|return
 operator|-
 literal|1
