@@ -1936,11 +1936,6 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-assert|assert
-literal|false
-operator|:
-literal|"Shouldn't be calling nextPosition() if you haven't asked for positions"
-assert|;
 return|return
 operator|-
 literal|1
